# higher-order-functions-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: helpers.rs  init.rs  lib.rs  map.rs  section.rs  type_equals.rs  zip.rs
tests/: init.rs  map.rs  section.rs  version-numbers.rs  zip.rs
